[package]
name = "mkah-data-ini"
version = "0.1.0"
authors = ["M.A. <https://github.com/mkahvi>"]
edition = "2018"
description = "INI parser."
# homepage = ""
repository = "https://github.com/mkahvi/rust-utility"
license = "MIT"
publish = false
#doc = 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#mkah-traits = { git = "https://github.com/mkahvi/rust-core/blob/master/traits/" } # this doesn't work for some reason
mkah-traits = { path = "../../core/traits/" }
